# kernels

./: CMakeLists.txt
cmake/: kernels-config.cmake.in
include/: bloch.hpp  fresnel_propagation.hpp  gauss.hpp  gauss_laguerre.hpp  kernel_loop.hpp  pupil.hpp  rayleigh_sommerfeld.hpp
tests/: CMakeLists.txt  test_bloch.cpp  test_fresnel_diffraction.cpp  test_gauss.cpp  test_gauss_laguerre.cpp  test_rayleigh_sommerfeld.cpp
